--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="app.css">
     </head>
     <body>
-        <div id="app" class="container"></div>
+        <div id="app"></div>
         <script src="app.js"></script>
     </body>
 </html>
